--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 # Compiled class file
 *.class
-
+.idea
 # Log file
 *.log
 
 # BlueJ files
 *.ctxt
 /target
+/modules/backend/target
+/modules/frontend/node_modules
+/modules/frontend/frontend.iml
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
