--- a/modules/backend/src/main/resources/application.properties
+++ b/modules/backend/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=agent
+spring.data.rest.basePath=/api
+# Enable H2 web console (for development/debugging)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# In-memory H2 database (non-persistent)
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=admin
+
+# Auto-create/update schema from entities
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
