--- a/modules/backend/pom.xml
+++ b/modules/backend/pom.xml
@@ -75,6 +75,21 @@
             <artifactId>json</artifactId>
             <version>20241224</version>
         </dependency>
+        <dependency>
+            <groupId>ca.uhn.hapi.fhir</groupId>
+            <artifactId>hapi-fhir-base</artifactId>
+            <version>8.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>ca.uhn.hapi.fhir</groupId>
+            <artifactId>hapi-fhir-client</artifactId>
+            <version>8.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>ca.uhn.hapi.fhir</groupId>
+            <artifactId>hapi-fhir-structures-r4</artifactId>
+            <version>7.6.1</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
