--- a/modules/backend/src/main/resources/application.properties
+++ b/modules/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=agent
+spring.application.name=Data Quality Agent
 server.port=8081
 spring.data.rest.basePath=/api
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
@@ -6,3 +6,4 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.open-in-view=false
+eu.bbmri_eric.quality.agent.fhir_url=http://localhost:8080/fhir
