--- a/modules/frontend/package.json
+++ b/modules/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.11.1",
     "vue": "^3.4.21"
   },
   "devDependencies": {
