--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Run linter
+        working-directory: modules/backend
         run:  mvn clean com.spotify.fmt:fmt-maven-plugin:check
 
   build-and-test:
@@ -55,6 +56,7 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Build and test
+        working-directory: modules/backend
         run: mvn clean verify
 
       - name: Build Docker image
