--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,4 @@
-
-name: CI/CD Pipeline for Java
-
+name: CI/CD Pipeline
 on:
   push:
     branches:
@@ -8,97 +6,82 @@ on:
   pull_request:
     branches:
       - master
-
 jobs:
   lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up JDK
-        uses: actions/setup-java@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
-
-      - name: Cache Maven dependencies
-        uses: actions/cache@v4
+      - uses: actions/cache@v4
         with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-
-      - name: Run linter
-        working-directory: modules/backend
-        run:  mvn clean com.spotify.fmt:fmt-maven-plugin:check
-
-  build-and-test:
+          key: ${{ runner.os }}-maven-${{ hashFiles('modules/backend/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven-
+      - working-directory: modules/backend
+        run: mvn --quiet clean com.spotify.fmt:fmt-maven-plugin:check
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+      - uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('modules/backend/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven-
+      - working-directory: modules/backend
+        run: mvn --quiet test
+  build:
+    name: Build
     runs-on: ubuntu-latest
     needs: lint
     permissions:
       packages: write
       contents: read
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up JDK
-        uses: actions/setup-java@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
-
-      - name: Cache Maven dependencies
-        uses: actions/cache@v4
+      - uses: actions/cache@v4
         with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-
-      - name: Build and test
-        working-directory: modules/backend
-        run: mvn clean verify
-
-      - name: Checkout codebase
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@29109295f81e9208d7d86ff1c6c12d2833863392 # v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3
+          key: ${{ runner.os }}-maven-${{ hashFiles('modules/backend/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven-
+      - working-directory: modules/backend
+        run: mvn --quiet clean package -DskipTests
+      - uses: docker/setup-buildx-action@v3
+      - id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository_owner }}/data-quality-agent
+          tags: |
+            type=sha
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=${{ github.ref_name }},enable={{is_default_branch}}
+      - if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@902fa8ec7d6ecbf8d84d538b9b233a880e428804 # v5
+      - uses: docker/build-push-action@v6
         with:
-          images: |
-            ghcr.io/${{ github.repository_owner }}/data-quality-agent
-          tags: |
-            type=ref,event=branch
-            type=raw,value=${{ github.head_ref }},event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'master') }}
-
-
-      - name: Build and push
-        uses: docker/build-push-action@14487ce63c7a62a4a324b0bfb37086795e31c6c1 # v6
-        with:
-          platforms: linux/amd64,linux/arm64
-          push: true
-          labels: ${{ steps.meta.outputs.labels }}
+          context: .
+          platforms: linux/amd64
+          push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
           tags: ${{ steps.meta.outputs.tags }}
-          build-args: ARTIFACT_VERSION=${{  github.ref_name }}
+          labels: ${{ steps.meta.outputs.labels }}
+          build-args: ARTIFACT_VERSION=${{ github.ref_name }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
