--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: lint
+    needs: test
     permissions:
       packages: write
       contents: read
