--- a/modules/backend/pom.xml
+++ b/modules/backend/pom.xml
@@ -99,6 +99,10 @@
             <artifactId>icd-validator</artifactId>
             <version>0.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
