Add Basic Auth implementation for agent and FHIR server

--- a/modules/backend/src/main/resources/application.properties
+++ b/modules/backend/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.open-in-view=false
 eu.bbmri_eric.quality.agent.fhir_url=http://localhost:8080/fhir
+eu.bbmri_eric.quality.agent.fhir_username=fhiruser
+eu.bbmri_eric.quality.agent.fhir_password=fhirpass
