Update CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,14 @@
 name: CI/CD Pipeline
 on:
+
   push:
     branches:
       - master
   pull_request:
     branches:
       - master
+    tags:
+      - 'v*.*.*'
 jobs:
   lint:
     name: Lint
