Change default FHIR pass

--- a/modules/backend/src/main/resources/application.properties
+++ b/modules/backend/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.password=admin
 spring.jpa.open-in-view=false
 eu.bbmri_eric.quality.agent.fhir_url=${FHIR_URL:http://localhost:8080/fhir}
 eu.bbmri_eric.quality.agent.fhir_username=${FHIR_USERNAME:bbmri}
-eu.bbmri_eric.quality.agent.fhir_password=${FHIR_PASSWORD:bbmri}
+eu.bbmri_eric.quality.agent.fhir_password=${FHIR_PASSWORD:fhir_pass}
