--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,14 +10,16 @@ on:
       - master
 jobs:
   lint:
-    name: Lint
+    name: Check Code Format
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
+
       - uses: actions/cache@v4
         with:
           path: ~/.m2/repository
@@ -26,15 +28,17 @@ jobs:
       - working-directory: modules/backend
         run: mvn --quiet clean com.spotify.fmt:fmt-maven-plugin:check
   test:
-    name: Test
+    name: Run Tests
     runs-on: ubuntu-latest
     needs: lint
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
+
       - uses: actions/cache@v4
         with:
           path: ~/.m2/repository
@@ -51,18 +55,23 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
+
       - uses: actions/cache@v4
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('modules/backend/pom.xml') }}
           restore-keys: ${{ runner.os }}-maven-
+
       - working-directory: modules/backend
         run: mvn --quiet clean package -DskipTests
+
       - uses: docker/setup-buildx-action@v3
+
       - id: meta
         uses: docker/metadata-action@v5
         with:
@@ -73,15 +82,16 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'master') }}
+
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
       - uses: docker/build-push-action@v6
         with:
           context: .
-          platforms: linux/amd64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
