--- a/modules/backend/src/main/resources/application.properties
+++ b/modules/backend/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=Data Quality Agent
 server.port=8081
 spring.data.rest.basePath=/api
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:file:/app/data/agent_db;DB_CLOSE_DELAY=-1;AUTO_SERVER=TRUE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.open-in-view=false
-eu.bbmri_eric.quality.agent.fhir_url=http://localhost:8080/fhir
-eu.bbmri_eric.quality.agent.fhir_username=bbmri
-eu.bbmri_eric.quality.agent.fhir_password=fhirpass
+eu.bbmri_eric.quality.agent.fhir_url=${FHIR_URL:http://localhost:8080/fhir}
+eu.bbmri_eric.quality.agent.fhir_username=${FHIR_USERNAME:bbmri}
+eu.bbmri_eric.quality.agent.fhir_password=${FHIR_PASSWORD:fhir_pass}
