--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,10 +46,52 @@ jobs:
           restore-keys: ${{ runner.os }}-maven-
       - working-directory: modules/backend
         run: mvn --quiet test
+  migration:
+    name: Test DB Migration
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@29109295f81e9208d7d86ff1c6c12d2833863392 # v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # v3
+
+      - run: docker compose up -d
+        name: Spin up latest stable image
+
+      - run: docker build -t ghcr.io/bbmri-cz/data-quality-agent:latest .
+        name: Build new image
+
+      - run: docker compose down
+        name: Down the container
+
+      - run: docker compose up -d
+        name: Spin up new image
+
+      - name: Check container health
+        run: |
+          for i in {1..10}; do
+          STATUS=$(docker inspect --format='{{.State.Health.Status}}' $(docker-compose ps -q quality-agent))
+          echo "Health status: $STATUS"
+          if [ "$STATUS" == "healthy" ]; then
+          echo "Container is healthy"
+          exit 0
+          fi
+          sleep 3
+          done
+          echo "Container is not healthy"
+          docker-compose logs
+          exit 1
+
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: test
+    needs:
+      - test
+      - migration
     permissions:
       packages: write
       contents: read
