--- a/modules/backend/src/main/resources/application.properties
+++ b/modules/backend/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=Data Quality Agent
 server.port=8081
 spring.data.rest.basePath=/api
+management.endpoints.web.base-path=/api
+management.endpoints.web.exposure.include=health
+management.endpoints.jmx.exposure.include=health
 spring.datasource.url=jdbc:h2:file:/app/data/agent_db;DB_CLOSE_DELAY=-1;AUTO_SERVER=TRUE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=admin
