--- a/modules/backend/src/main/resources/application.properties
+++ b/modules/backend/src/main/resources/application.properties
@@ -4,10 +4,12 @@ spring.data.rest.basePath=/api
 management.endpoints.web.base-path=/api
 management.endpoints.web.exposure.include=health
 management.endpoints.jmx.exposure.include=health
-spring.datasource.url=jdbc:h2:file:/app/data/agent_db;DB_CLOSE_DELAY=-1;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.idle-timeout=30000
 spring.jpa.open-in-view=false
 eu.bbmri_eric.quality.agent.fhir_url=${FHIR_URL:http://localhost:8080/fhir}
 eu.bbmri_eric.quality.agent.fhir_username=${FHIR_USERNAME:bbmri}
