--- a/modules/backend/pom.xml
+++ b/modules/backend/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>${spring.boot.version}</version>
+        <version>3.5.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>eu.bbmri_eric.quality</groupId>
@@ -30,7 +30,6 @@
         <java.version>21</java.version>
         <spring-modulith.version>1.4.0</spring-modulith.version>
         <spring-doc.version>2.8.13</spring-doc.version>
-        <spring.boot.version>3.5.0</spring.boot.version>
         <json.version>20241224</json.version>
         <hapi.fhir.version>8.2.0</hapi.fhir.version>
         <hapi.fhir.structures.version>7.6.1</hapi.fhir.structures.version>
