--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -12,6 +12,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.13.1",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
