--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
       - master
 jobs:
   lint:
-    name: Check Code Format
+    name: Check Code Format (Agent)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -27,8 +27,28 @@ jobs:
           restore-keys: ${{ runner.os }}-maven-
       - working-directory: modules/backend
         run: mvn --quiet clean com.spotify.fmt:fmt-maven-plugin:check
+
+  lint-server:
+    name: Check Code Format (Server)
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-server-${{ hashFiles('server/backend/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven-server-
+      - working-directory: server/backend
+        run: mvn --quiet clean com.spotify.fmt:fmt-maven-plugin:check
+
   test:
-    name: Run Tests
+    name: Run Tests (Agent)
     runs-on: ubuntu-latest
     needs: lint
     steps:
@@ -46,8 +66,29 @@ jobs:
           restore-keys: ${{ runner.os }}-maven-
       - working-directory: modules/backend
         run: mvn --quiet test
+
+  test-server:
+    name: Run Tests (Server)
+    runs-on: ubuntu-latest
+    needs: lint-server
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-server-${{ hashFiles('server/backend/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven-server-
+      - working-directory: server/backend
+        run: mvn --quiet test
+
   migration:
-    name: Test DB Migration
+    name: Test DB Migration (Agent)
     runs-on: ubuntu-latest
     needs: lint
     steps:
@@ -92,6 +133,27 @@ jobs:
           docker logs quality-agent
           exit 1
 
+  migration-server:
+    name: Test DB Migration (Server)
+    runs-on: ubuntu-latest
+    needs: lint-server
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@29109295f81e9208d7d86ff1c6c12d2833863392 # v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # v3
+
+      - uses: docker/build-push-action@v6
+        name: Build server image
+        with:
+          context: ./server
+          tags: ghcr.io/bbmri-cz/data-quality-server:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
   docs:
     name: Build and Deploy Documentation
     runs-on: ubuntu-latest
@@ -133,7 +195,7 @@ jobs:
         uses: actions/deploy-pages@v4
 
   build:
-    name: Build
+    name: Build Agent
     runs-on: ubuntu-latest
     needs:
       - test
@@ -180,6 +242,61 @@ jobs:
       - uses: docker/build-push-action@v6
         with:
           context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          build-args: ARTIFACT_VERSION=${{ github.ref_name }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  build-server:
+    name: Build Server
+    runs-on: ubuntu-latest
+    needs:
+      - test-server
+      - migration-server
+    permissions:
+      packages: write
+      contents: read
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-server-${{ hashFiles('server/backend/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven-server-
+
+      - working-directory: server/backend
+        run: mvn --quiet clean package -DskipTests
+
+      - uses: docker/setup-buildx-action@v3
+
+      - id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository_owner }}/data-quality-server
+          tags: |
+            type=sha
+            type=raw,value=${{ github.head_ref }},event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'master') }}
+
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: docker/build-push-action@v6
+        with:
+          context: ./server
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
