--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -279,7 +279,7 @@ jobs:
       - uses: docker/build-push-action@v6
         with:
           context: .
-          tags: ghcr.io/${{ github.repository_owner }}/data-quality-agent:latest
+          tags: ghcr.io/bbmri-cz/data-quality-agent:latest
           build-args: ARTIFACT_VERSION=${{ github.ref_name }}
           cache-from: type=gha
           outputs: type=docker,dest=/tmp/agent-image.tar
@@ -348,7 +348,7 @@ jobs:
       - uses: docker/build-push-action@v6
         with:
           context: ./server
-          tags: ghcr.io/${{ github.repository_owner }}/data-quality-server:latest
+          tags: ghcr.io/bbmri-cz/data-quality-server:latest
           build-args: ARTIFACT_VERSION=${{ github.ref_name }}
           cache-from: type=gha
           outputs: type=docker,dest=/tmp/server-image.tar
